OESE-239 fix missing search on mobile

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -2266,13 +2266,28 @@ div[id*='res'] .oese-search-result .p_title a{ color:#2d8700; font-size:20px; fo
 	ul.wpsolr_facet_scroll li { line-height:1.25em; }
 	ul.wpsolr_facet_scroll li ul { margin-left:15px; }
 	.oese-search-result-left { display:none; }
-    .mobile-nav-bar.row { margin-right:0; margin-left:0; }
+    .mobile-nav-bar.row { margin-right:0; margin-left:0; margin-top:-48px; }
     .responsive-menu-section { text-align:right; display:inline-block !important; }
-    .mobile-nav-icons.navi_icn { width:16px; margin-right:0; height:20px;padding-bottom:0 !important; }
+    .mobile-nav-icons.navi_icn { width:16px; margin-right:5px; height:20px;padding-bottom:0 !important; }
     .mobile-nav-icons.navi_icn:hover .fa-bars,
     .mobile-nav-icons.navi_icn:focus .fa-bars,
     .mobile-nav-icons.navi_icn:hover .fa-times,
     .mobile-nav-icons.navi_icn:focus .fa-times { width:auto; outline: 1px solid #7ab4ed; }
+    .top-nav-spacing { margin-bottom:15px; }
+    .topbar-search-section { width:auto; height:auto; margin-top:25px; }
+    .custom-common-padding.default-template { margin:0 -15px 15px !important; padding-top:0; }
+    .top-nav-spacing .col-9 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .top-nav-spacing .d-xl-block {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 90%;
+        flex: 0 0 90%;
+        max-width: 90%;
+    }
 }
 
 @media (max-width: 768px){
